# apartment-scrapper

./: README.md  package.json
profitability_calculator/: pyproject.toml
profitability_calculator/src/: __main__.py  model.py  service.py  utils.py
scrapper/: .gitignore  README.md  dockerfile  go.mod  go.sum  makefile  package-lock.json  tsconfig.json
scrapper/cmd/: main.go
scrapper/internal/config/: config.go  sqlite.go
scrapper/internal/model/: apartment.go
scrapper/internal/provider/: logger.go
scrapper/internal/provider/scrapper/: apartment.go  list.go
scrapper/internal/repository/: apartment.go
scrapper/internal/service/: scrapeFullList.go
scrapper/src/config/: logger.ts  sqlite.ts
scrapper/src/models/: aparments.ts
scrapper/src/services/scrapper/: apartments.ts  index.ts
src/: index.ts
src/repositories/: apartment.repository.ts
src/services/scrapper/: list.ts
src/utils/: sleep.ts
