[project]
name = "profitability-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "martinbombin",email = "martn.b.o@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 72